--- a/Urban Dictionary/app/src/main/res/layout/activity_main.xml
+++ b/Urban Dictionary/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,40 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-
+    <!-- MarginTop uses magic number because single usage doesn't warrant adding to dimen -->
     <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/search_term_layout"
             android:layout_width="match_parent"
-            android:layout_height="21dp"
-            android:hint="@string/search_box_hint"
-
+            android:layout_height="wrap_content"
             android:layout_marginTop="68dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp">
+            android:layout_marginStart="@dimen/small_marg"
+            android:layout_marginEnd="@dimen/small_marg"
+            android:hint="@string/search_box_hint"
+            tools:hint="lol">
 
         <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/search_term_edit_text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="lol"
-        />
-
+                android:layout_height="match_parent"
+                tools:hint="lol" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/large_marg"
+            app:layout_constraintTop_toBottomOf="@id/search_term_layout"
+            android:layout_marginBottom="@dimen/large_marg"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="@dimen/large_marg"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="@dimen/large_marg"
+            app:layout_constraintEnd_toEndOf="parent"
+    >
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
