--- a/Urban Dictionary/app/src/main/res/layout/activity_main.xml
+++ b/Urban Dictionary/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,15 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+    <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
     <!-- MarginTop uses magic number because single usage doesn't warrant adding to dimen -->
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/search_term_layout"
