--- a/Urban Dictionary/app/src/main/res/layout/activity_main.xml
+++ b/Urban Dictionary/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data tools:ignore="MissingConstraints">
+        <variable
+            name="viewModel"
+            type="com.apsoftware.urbandictionary.ui.definition_activity.DefinitionViewModel"/>
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".ui.definition_activity.DefinitionActivity">
 
     <!-- MarginTop uses magic number because single usage doesn't warrant adding to dimen -->
     <com.google.android.material.textfield.TextInputLayout
@@ -39,9 +47,18 @@
             android:textOff="@string/thumb_down"
             android:textOn="@string/thumb_up"
             tools:checked="false"/>
+    <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <!-- List view for holding definitions -->
     <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/defintion_list"
             android:layout_width="@dimen/default_constraint"
             android:layout_height="@dimen/default_constraint"
             android:layout_marginTop="@dimen/large_marg"
@@ -56,3 +73,4 @@
             tools:listitem="@layout/definition_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
