--- a/Urban Dictionary/app/src/main/res/layout/definition_view.xml
+++ b/Urban Dictionary/app/src/main/res/layout/definition_view.xml
@@ -5,11 +5,11 @@
     <data>
         <variable
                 name="position"
-                type="java.lang.Integer" />
+                type="java.lang.Integer"/>
 
         <variable
                 name="viewModel"
-                type="com.apsoftware.myapplication.viewmodels.DefinitionViewModel" />
+                type="com.apsoftware.myapplication.viewmodels.DefinitionViewModel"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -21,7 +21,7 @@
             android:clickable="false"
             android:focusable="false"
             android:layout_marginBottom="@dimen/small_marg"
-    android:focusableInTouchMode="true">
+            android:focusableInTouchMode="true">
 
         <!-- Value is returned in json response to urban dictionary api call -->
         <TextView
@@ -30,8 +30,9 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:textSize="@dimen/large_text_size"
+                android:textSize="@dimen/medium_text_size"
                 android:textStyle="bold"
+                android:text="@{viewModel.getDefinitionByIndex(position).author}"
                 tools:text="Author: StarkLife"/>
 
         <!-- Value is returned in json response to urban dictionary api call -->
@@ -43,6 +44,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:textSize="@dimen/small_text_size"
+                android:text="@{viewModel.getDefinitionByIndex(position).written_on}"
                 tools:text="8-12-2002"/>
 
         <!-- Value is returned in json response to urban dictionary api call -->
@@ -56,6 +58,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:textSize="@dimen/medium_text_size"
                 android:maxLines="10"
+                android:text="@{viewModel.getDefinitionByIndex(position).definition}"
                 tools:text="@string/example_def"/>
 
         <!-- Display 5 more lines of the definition -->
@@ -85,26 +88,44 @@
         <!-- Value is returned in json response to urban dictionary api call -->
         <TextView
                 android:id="@+id/upvotes"
-                android:layout_width="@dimen/standard_view_width"
+                android:layout_width="@dimen/skinny_view_width"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/more_button"
                 app:layout_constraintBottom_toBottomOf="@id/more_button"
-                app:layout_constraintEnd_toStartOf="@id/downvotes"
+                app:layout_constraintEnd_toStartOf="@id/upvote_count"
                 android:textSize="@dimen/tiny_text_size"
                 android:background="@null"
-                tools:text="U  999999"/>
+                android:text="@string/thumb_up"
+                tools:text="@string/thumb_up"/>
+        <TextView
+                android:id="@+id/upvote_count"
+                android:layout_width="@dimen/standard_view_width" android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/upvotes"
+                app:layout_constraintBottom_toBottomOf="@id/upvotes"
+                app:layout_constraintEnd_toStartOf="@id/downvote_count"
+                android:text="@{Integer.toString(viewModel.getDefinitionByIndex(position).thumbs_up)}"
+                tools:text="99999"/>
+        <TextView
+                android:id="@+id/downvote_count"
+                android:layout_width="@dimen/standard_view_width" android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="@id/upvotes"
+                app:layout_constraintBottom_toBottomOf="@id/upvotes"
+                app:layout_constraintEnd_toStartOf="@id/downvotes"
+                android:text="@{Integer.toString(viewModel.getDefinitionByIndex(position).thumbs_down)}"
+                tools:text="99999"/>
 
         <!-- Value is returned in json response to urban dictionary api call -->
         <TextView
                 android:id="@+id/downvotes"
-                android:layout_width="@dimen/standard_view_width"
+                android:layout_width="@dimen/skinny_view_width"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="@id/more_button"
                 app:layout_constraintBottom_toBottomOf="@id/more_button"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:textSize="@dimen/tiny_text_size"
                 android:background="@null"
-                tools:text="D  999999"/>
+                android:text="@string/thumb_down"
+                tools:text="@string/thumb_down"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
