--- a/Urban Dictionary/app/src/main/res/layout/main_activity.xml
+++ b/Urban Dictionary/app/src/main/res/layout/main_activity.xml
@@ -27,7 +27,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     style="?android:attr/progressBarStyleLarge"
-                    android:id="@+id/spinnerLoading"
+                    android:id="@+id/loading_spinner"
                     android:indeterminate="true"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
@@ -48,12 +48,13 @@
                 android:layout_marginEnd="@dimen/small_marg"
                 android:hint="@string/search_box_hint">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <EditText
                     android:id="@+id/search_term_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:focusable="@{model.viewUnlocked(model.loading)}"
                     tools:text="lol">
-            </com.google.android.material.textfield.TextInputEditText>
+            </EditText>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,6 +66,7 @@
                 app:layout_constraintTop_toBottomOf="@id/search_term_layout"
                 app:layout_constraintEnd_toStartOf="@id/sort_button"
                 android:textSize="@dimen/small_text_size"
+                android:focusable="@{model.viewUnlocked(model.loading)}"
                 android:text="@string/search"/>
         <ToggleButton
                 android:id="@+id/sort_button"
@@ -74,6 +76,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:textOn="@string/thumb_down"
                 android:textOff="@string/thumb_up"
+                android:focusable="@{model.viewUnlocked(model.loading)}"
                 tools:checked="false"/>
 
         <!-- List view for holding definitions -->
@@ -90,6 +93,7 @@
                 android:layout_marginEnd="@dimen/large_marg"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:setAdapter="@{model.getDefinitionListAdapter()}"
+                android:focusable="@{model.viewUnlocked(model.loading)}"
                 tools:itemCount="7"
                 tools:listitem="@layout/definition_view"
         />
